--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         }
 
         .contact a {
-            color: #00a0e4; /* Kolor linków */
+            color: #00a0e4; /* Kolor linków w menu */
             text-decoration: none;
         }
 
@@ -64,12 +64,19 @@
         
         <div class="section" id="about">
             <h2>O nas</h2>
-            <p>Radio internetowe relacjonujące rozgrywki w Showdown - sport dla niewidomych.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla consectetur tortor at ex vestibulum, id luctus urna feugiat.</p>
+            <p>Curabitur fringilla libero a massa facilisis, in sodales odio volutpat. Fusce et est vel justo malesuada varius.</p>
+            <p>Mauris ac tristique quam. Proin ut tristique dolor. Maecenas tristique vitae mi auctor dapibus.</p>
+            <p>Phasellus non enim tristique, volutpat quam sit amet, lacinia justo. Integer et sapien nec purus vehicula dignissim.</p>
         </div>
 
         <div class="section" id="technology">
             <h2>Technologia</h2>
-            <p>Wykorzystujemy najnowocześniejsze rozwiązania technologiczne, aby zapewnić najlepszą jakość relacji ze światem Showdown.</p>
+            <p>Proin scelerisque, odio eget semper tincidunt, justo est commodo tortor, non scelerisque elit dolor at quam.</p>
+            <p>Donec eget massa nec odio posuere eleifend. Vestibulum vehicula vel felis in egestas. Sed lacinia a erat sit amet bibendum.</p>
+            <p>Suspendisse potenti. Integer in diam metus. Nunc volutpat venenatis lorem, non vulputate odio bibendum nec.</p>
+            <p>Nullam eget mi non ipsum bibendum consequat. Duis auctor euismod elit, a tincidunt justo efficitur at.</p>
+            <p>Curabitur sit amet dui nec purus lacinia finibus in sit amet arcu. Aenean nec dignissim augue, id fringilla nulla.</p>
         </div>
 
         <div class="section" id="how-to-listen">
