--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,7 +24,6 @@
 
         p {
             font-size: 18px;
-            text-align: left;
         }
 
         #audio-player {
@@ -50,6 +49,10 @@
             text-decoration: none;
             margin: 10px;
         }
+
+        .section h2 {
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -57,14 +60,14 @@
         <h1>Showdown Radio</h1>
 
         <nav>
-            <a href="#about">O nas</a>
+            <a href="#about">O radiu</a>
             <a href="#technology">Technologia</a>
             <a href="#how-to-listen">Jak słuchać?</a>
             <a href="#contact">Kontakt</a>
         </nav>
         
         <div class="section" id="about">
-            <h2>O nas</h2>
+            <h2>O radiu</h2>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla consectetur tortor at ex vestibulum, id luctus urna feugiat.
                 Curabitur fringilla libero a massa facilisis, in sodales odio volutpat. Fusce et est vel justo malesuada varius.
@@ -74,6 +77,37 @@
                 Curabitur fringilla libero a massa facilisis, in sodales odio volutpat. Fusce et est vel justo malesuada varius.
                 Mauris ac tristique quam. Proin ut tristique dolor. Maecenas tristique vitae mi auctor dapibus.
                 Phasellus non enim tristique, volutpat quam sit amet, lacinia justo. Integer et sapien nec purus vehicula dignissim.
+                Proin scelerisque, odio eget semper tincidunt, justo est commodo tortor, non scelerisque elit dolor at quam.
+                Donec eget massa nec odio posuere eleifend. Vestibulum vehicula vel felis in egestas. Sed lacinia a erat sit amet bibendum.
+                Suspendisse potenti. Integer in diam metus. Nunc volutpat venenatis lorem, non vulputate odio bibendum nec.
+                Nullam eget mi non ipsum bibendum consequat. Duis auctor euismod elit, a tincidunt justo efficitur at.
+                Curabitur sit amet dui nec purus lacinia finibus in sit amet arcu. Aenean nec dignissim augue, id fringilla nulla.
+                Proin scelerisque, odio eget semper tincidunt, justo est commodo tortor, non scelerisque elit dolor at quam.
+                Donec eget massa nec odio posuere eleifend. Vestibulum vehicula vel felis in egestas. Sed lacinia a erat sit amet bibendum.
+                Suspendisse potenti. Integer in diam metus. Nunc volutpat venenatis lorem, non vulputate odio bibendum nec.
+                Nullam eget mi non ipsum bibendum consequat. Duis auctor euismod elit, a tincidunt justo efficitur at.
+                Curabitur sit amet dui nec purus lacinia finibus in sit amet arcu. Aenean nec dignissim augue, id fringilla nulla.
+                Proin scelerisque, odio eget semper tincidunt, justo est commodo tortor, non scelerisque elit dolor at quam.
+                Donec eget massa nec odio posuere eleifend. Vestibulum vehicula vel felis in egestas. Sed lacinia a erat sit amet bibendum.
+                Suspendisse potenti. Integer in diam metus. Nunc volutpat venenatis lorem, non vulputate odio bibendum nec.
+                Nullam eget mi non ipsum bibendum consequat. Duis auctor euismod elit, a tincidunt justo efficitur at.
+                Curabitur sit amet dui nec purus lacinia finibus in sit amet arcu. Aenean nec dignissim augue, id fringilla nulla.
+                Proin scelerisque, odio eget semper tincidunt, justo est commodo tortor, non scelerisque elit dolor at quam.
+                Donec eget massa nec odio posuere eleifend. Vestibulum vehicula vel felis in egestas. Sed lacinia a erat sit amet bibendum.
+                Suspendisse potenti. Integer in diam metus. Nunc volutpat venenatis lorem, non vulputate odio bibendum nec.
+                Nullam eget mi non ipsum bibendum consequat. Duis auctor euismod elit, a tincidunt justo efficitur at.
+                Curabitur sit amet dui nec purus lacinia finibus in sit amet arcu. Aenean nec dignissim augue, id fringilla nulla.
+                Proin scelerisque, odio eget semper tincidunt, justo est commodo tortor, non scelerisque elit dolor at quam.
+                Donec eget massa nec odio posuere eleifend. Vestibulum vehicula vel felis in egestas. Sed lacinia a erat sit amet bibendum.
+                Suspendisse potenti. Integer in diam metus. Nunc volutpat venenatis lorem, non vulputate odio bibendum nec.
+                Nullam eget mi non ipsum bibendum consequat. Duis auctor euismod elit, a tincidunt justo efficitur at.
+                Curabitur sit amet dui nec purus lacinia finibus in sit amet arcu. Aenean nec dignissim augue, id fringilla nulla.
+                Proin scelerisque, odio eget semper tincidunt, justo est commodo tortor, non scelerisque elit dolor at quam.
+                Donec eget massa nec odio posuere eleifend. Vestibulum vehicula vel felis in egestas. Sed lacinia a erat sit amet bibendum.
+                Suspendisse potenti. Integer in diam metus. Nunc volutpat venenatis lorem, non vulputate odio bibendum nec.
+                Nullam eget mi non ipsum bibendum consequat. Duis auctor euismod elit, a tincidunt justo efficitur at.
+                Curabitur sit amet dui nec purus lacinia finibus in sit amet arcu. Aenean nec dignissim augue, id fringilla nulla.
+
             </p>
         </div>
 
@@ -85,6 +119,32 @@
                 Suspendisse potenti. Integer in diam metus. Nunc volutpat venenatis lorem, non vulputate odio bibendum nec.
                 Nullam eget mi non ipsum bibendum consequat. Duis auctor euismod elit, a tincidunt justo efficitur at.
                 Curabitur sit amet dui nec purus lacinia finibus in sit amet arcu. Aenean nec dignissim augue, id fringilla nulla.
+                Proin scelerisque, odio eget semper tincidunt, justo est commodo tortor, non scelerisque elit dolor at quam.
+                Donec eget massa nec odio posuere eleifend. Vestibulum vehicula vel felis in egestas. Sed lacinia a erat sit amet bibendum.
+                Suspendisse potenti. Integer in diam metus. Nunc volutpat venenatis lorem, non vulputate odio bibendum nec.
+                Nullam eget mi non ipsum bibendum consequat. Duis auctor euismod elit, a tincidunt justo efficitur at.
+                Curabitur sit amet dui nec purus lacinia finibus in sit amet arcu. Aenean nec dignissim augue, id fringilla nulla.
+                Proin scelerisque, odio eget semper tincidunt, justo est commodo tortor, non scelerisque elit dolor at quam.
+                Donec eget massa nec odio posuere eleifend. Vestibulum vehicula vel felis in egestas. Sed lacinia a erat sit amet bibendum.
+                Suspendisse potenti. Integer in diam metus. Nunc volutpat venenatis lorem, non vulputate odio bibendum nec.
+                Nullam eget mi non ipsum bibendum consequat. Duis auctor euismod elit, a tincidunt justo efficitur at.
+                Curabitur sit amet dui nec purus lacinia finibus in sit amet arcu. Aenean nec dignissim augue, id fringilla nulla.
+                Proin scelerisque, odio eget semper tincidunt, justo est commodo tortor, non scelerisque elit dolor at quam.
+                Donec eget massa nec odio posuere eleifend. Vestibulum vehicula vel felis in egestas. Sed lacinia a erat sit amet bibendum.
+                Suspendisse potenti. Integer in diam metus. Nunc volutpat venenatis lorem, non vulputate odio bibendum nec.
+                Nullam eget mi non ipsum bibendum consequat. Duis auctor euismod elit, a tincidunt justo efficitur at.
+                Curabitur sit amet dui nec purus lacinia finibus in sit amet arcu. Aenean nec dignissim augue, id fringilla nulla.
+                Proin scelerisque, odio eget semper tincidunt, justo est commodo tortor, non scelerisque elit dolor at quam.
+                Donec eget massa nec odio posuere eleifend. Vestibulum vehicula vel felis in egestas. Sed lacinia a erat sit amet bibendum.
+                Suspendisse potenti. Integer in diam metus. Nunc volutpat venenatis lorem, non vulputate odio bibendum nec.
+                Nullam eget mi non ipsum bibendum consequat. Duis auctor euismod elit, a tincidunt justo efficitur at.
+                Curabitur sit amet dui nec purus lacinia finibus in sit amet arcu. Aenean nec dignissim augue, id fringilla nulla.
+                Proin scelerisque, odio eget semper tincidunt, justo est commodo tortor, non scelerisque elit dolor at quam.
+                Donec eget massa nec odio posuere eleifend. Vestibulum vehicula vel felis in egestas. Sed lacinia a erat sit amet bibendum.
+                Suspendisse potenti. Integer in diam metus. Nunc volutpat venenatis lorem, non vulputate odio bibendum nec.
+                Nullam eget mi non ipsum bibendum consequat. Duis auctor euismod elit, a tincidunt justo efficitur at.
+                Curabitur sit amet dui nec purus lacinia finibus in sit amet arcu. Aenean nec dignissim augue, id fringilla nulla.
+
             </p>
         </div>
 
@@ -96,7 +156,7 @@
             </audio>
         </div>
 
-        <div class "section" id="contact">
+        <div class="section" id="contact">
             <h2>Kontakt</h2>
             <p>Skontaktuj się z nami: <a href="mailto:info@showdownradio.com">info@showdownradio.com</a></p>
         </div>
