--- a/index.html
+++ b/index.html
@@ -107,7 +107,6 @@
                 Suspendisse potenti. Integer in diam metus. Nunc volutpat venenatis lorem, non vulputate odio bibendum nec.
                 Nullam eget mi non ipsum bibendum consequat. Duis auctor euismod elit, a tincidunt justo efficitur at.
                 Curabitur sit amet dui nec purus lacinia finibus in sit amet arcu. Aenean nec dignissim augue, id fringilla nulla.
-
             </p>
         </div>
 
@@ -144,7 +143,6 @@
                 Suspendisse potenti. Integer in diam metus. Nunc volutpat venenatis lorem, non vulputate odio bibendum nec.
                 Nullam eget mi non ipsum bibendum consequat. Duis auctor euismod elit, a tincidunt justo efficitur at.
                 Curabitur sit amet dui nec purus lacinia finibus in sit amet arcu. Aenean nec dignissim augue, id fringilla nulla.
-
             </p>
         </div>
 
@@ -154,11 +152,75 @@
                 <source src="link_do_twojego_strumienia_audio.mp3" type="audio/mpeg">
                 Przeglądarka nie obsługuje odtwarzacza audio.
             </audio>
+            <p>
+                Proin scelerisque, odio eget semper tincidunt, justo est commodo tortor, non scelerisque elit dolor at quam.
+                Donec eget massa nec odio posuere eleifend. Vestibulum vehicula vel felis in egestas. Sed lacinia a erat sit amet bibendum.
+                Suspendisse potenti. Integer in diam metus. Nunc volutpat venenatis lorem, non vulputate odio bibendum nec.
+                Nullam eget mi non ipsum bibendum consequat. Duis auctor euismod elit, a tincidunt justo efficitur at.
+                Curabitur sit amet dui nec purus lacinia finibus in sit amet arcu. Aenean nec dignissim augue, id fringilla nulla.
+                Proin scelerisque, odio eget semper tincidunt, justo est commodo tortor, non scelerisque elit dolor at quam.
+                Donec eget massa nec odio posuere eleifend. Vestibulum vehicula vel felis in egestas. Sed lacinia a erat sit amet bibendum.
+                Suspendisse potenti. Integer in diam metus. Nunc volutpat venenatis lorem, non vulputate odio bibendum nec.
+                Nullam eget mi non ipsum bibendum consequat. Duis auctor euismod elit, a tincidunt justo efficitur at.
+                Curabitur sit amet dui nec purus lacinia finibus in sit amet arcu. Aenean nec dignissim augue, id fringilla nulla.
+                Proin scelerisque, odio eget semper tincidunt, justo est commodo tortor, non scelerisque elit dolor at quam.
+                Donec eget massa nec odio posuere eleifend. Vestibulum vehicula vel felis in egestas. Sed lacinia a erat sit amet bibendum.
+                Suspendisse potenti. Integer in diam metus. Nunc volutpat venenatis lorem, non vulputate odio bibendum nec.
+                Nullam eget mi non ipsum bibendum consequat. Duis auctor euismod elit, a tincidunt justo efficitur at.
+                Curabitur sit amet dui nec purus lacinia finibus in sit amet arcu. Aenean nec dignissim augue, id fringilla nulla.
+                Proin scelerisque, odio eget semper tincidunt, justo est commodo tortor, non scelerisque elit dolor at quam.
+                Donec eget massa nec odio posuere eleifend. Vestibulum vehicula vel felis in egestas. Sed lacinia a erat sit amet bibendum.
+                Suspendisse potenti. Integer in diam metus. Nunc volutpat venenatis lorem, non vulputate odio bibendum nec.
+                Nullam eget mi non ipsum bibendum consequat. Duis auctor euismod elit, a tincidunt justo efficitur at.
+                Curabitur sit amet dui nec purus lacinia finibus in sit amet arcu. Aenean nec dignissim augue, id fringilla nulla.
+                Proin scelerisque, odio eget semper tincidunt, justo est commodo tortor, non scelerisque elit dolor at quam.
+                Donec eget massa nec odio posuere eleifend. Vestibulum vehicula vel felis in egestas. Sed lacinia a erat sit amet bibendum.
+                Suspendisse potenti. Integer in diam metus. Nunc volutpat venenatis lorem, non vulputate odio bibendum nec.
+                Nullam eget mi non ipsum bibendum consequat. Duis auctor euismod elit, a tincidunt justo efficitur at.
+                Curabitur sit amet dui nec purus lacinia finibus in sit amet arcu. Aenean nec dignissim augue, id fringilla nulla.
+                Proin scelerisque, odio eget semper tincidunt, justo est commodo tortor, non scelerisque elit dolor at quam.
+                Donec eget massa nec odio posuere eleifend. Vestibulum vehicula vel felis in egestas. Sed lacinia a erat sit amet bibendum.
+                Suspendisse potenti. Integer in diam metus. Nunc volutpat venenatis lorem, non vulputate odio bibendum nec.
+                Nullam eget mi non ipsum bibendum consequat. Duis auctor euismod elit, a tincidunt justo efficitur at.
+                Curabitur sit amet dui nec purus lacinia finibus in sit amet arcu. Aenean nec dignissim augue, id fringilla nulla.
+            </p>
         </div>
 
         <div class="section" id="contact">
             <h2>Kontakt</h2>
             <p>Skontaktuj się z nami: <a href="mailto:info@showdownradio.com">info@showdownradio.com</a></p>
+            <p>
+                Proin scelerisque, odio eget semper tincidunt, justo est commodo tortor, non scelerisque elit dolor at quam.
+                Donec eget massa nec odio posuere eleifend. Vestibulum vehicula vel felis in egestas. Sed lacinia a erat sit amet bibendum.
+                Suspendisse potenti. Integer in diam metus. Nunc volutpat venenatis lorem, non vulputate odio bibendum nec.
+                Nullam eget mi non ipsum bibendum consequat. Duis auctor euismod elit, a tincidunt justo efficitur at.
+                Curabitur sit amet dui nec purus lacinia finibus in sit amet arcu. Aenean nec dignissim augue, id fringilla nulla.
+                Proin scelerisque, odio eget semper tincidunt, justo est commodo tortor, non scelerisque elit dolor at quam.
+                Donec eget massa nec odio posuere eleifend. Vestibulum vehicula vel felis in egestas. Sed lacinia a erat sit amet bibendum.
+                Suspendisse potenti. Integer in diam metus. Nunc volutpat venenatis lorem, non vulputate odio bibendum nec.
+                Nullam eget mi non ipsum bibendum consequat. Duis auctor euismod elit, a tincidunt justo efficitur at.
+                Curabitur sit amet dui nec purus lacinia finibus in sit amet arcu. Aenean nec dignissim augue, id fringilla nulla.
+                Proin scelerisque, odio eget semper tincidunt, justo est commodo tortor, non scelerisque elit dolor at quam.
+                Donec eget massa nec odio posuere eleifend. Vestibulum vehicula vel felis in egestas. Sed lacinia a erat sit amet bibendum.
+                Suspendisse potenti. Integer in diam metus. Nunc volutpat venenatis lorem, non vulputate odio bibendum nec.
+                Nullam eget mi non ipsum bibendum consequat. Duis auctor euismod elit, a tincidunt justo efficitur at.
+                Curabitur sit amet dui nec purus lacinia finibus in sit amet arcu. Aenean nec dignissim augue, id fringilla nulla.
+                Proin scelerisque, odio eget semper tincidunt, justo est commodo tortor, non scelerisque elit dolor at quam.
+                Donec eget massa nec odio posuere eleifend. Vestibulum vehicula vel felis in egestas. Sed lacinia a erat sit amet bibendum.
+                Suspendisse potenti. Integer in diam metus. Nunc volutpat venenatis lorem, non vulputate odio bibendum nec.
+                Nullam eget mi non ipsum bibendum consequat. Duis auctor euismod elit, a tincidunt justo efficitur at.
+                Curabitur sit amet dui nec purus lacinia finibus in sit amet arcu. Aenean nec dignissim augue, id fringilla nulla.
+                Proin scelerisque, odio eget semper tincidunt, justo est commodo tortor, non scelerisque elit dolor at quam.
+                Donec eget massa nec odio posuere eleifend. Vestibulum vehicula vel felis in egestas. Sed lacinia a erat sit amet bibendum.
+                Suspendisse potenti. Integer in diam metus. Nunc volutpat venenatis lorem, non vulputate odio bibendum nec.
+                Nullam eget mi non ipsum bibendum consequat. Duis auctor euismod elit, a tincidunt justo efficitur at.
+                Curabitur sit amet dui nec purus lacinia finibus in sit amet arcu. Aenean nec dignissim augue, id fringilla nulla.
+                Proin scelerisque, odio eget semper tincidunt, justo est commodo tortor, non scelerisque elit dolor at quam.
+                Donec eget massa nec odio posuere eleifend. Vestibulum vehicula vel felis in egestas. Sed lacinia a erat sit amet bibendum.
+                Suspendisse potenti. Integer in diam metus. Nunc volutpat venenatis lorem, non vulputate odio bibendum nec.
+                Nullam eget mi non ipsum bibendum consequat. Duis auctor euismod elit, a tincidunt justo efficitur at.
+                Curabitur sit amet dui nec purus lacinia finibus in sit amet arcu. Aenean nec dignissim augue, id fringilla nulla.
+            </p>
         </div>
     </div>
 </body>
